# PONG-2D

./: .gitignore  AI.cpp  AI.h  Ball.cpp  Ball.h  CMakeLists.txt  IGracz.h  IMenu.h  PONG-2D.sln  PONG-2D.vcxproj  PONG-2D.vcxproj.filters  README.MD  Silnik.cpp  game.h  gameapp.cpp  gameapp.h  globals.h  gracz.cpp  gracz.h  gracz1.cfg  main.cpp  menu.cpp  menu.h  plansza.cpp  plansza.h  rakieta.cpp  rakieta.h  silnik.cpp  silnik.h  silnik_before_refaktor.h  sterowanie.cpp  sterowanie.h
x64/Debug/: PONG-2D.ilk  vc141.idb  vc142.idb
x64/Debug/PONG-2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PONG-2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
